--- a/frontend/src/styles/sections.css
+++ b/frontend/src/styles/sections.css
@@ -1632,9 +1632,22 @@
 }
 
 .brand-logo {
-  width: 34px;
-  height: 34px;
+  width: 42px;
+  height: 42px;
   display: block;
+}
+
+@media (min-width: 1024px) {
+  .brand-logo {
+    width: 64px;
+    height: 64px;
+  }
+}
+@media (min-width: 320px) {
+  .brand-logo {
+    width: 48px;
+    height: 48px;
+  }
 }
 
 .navbar-links {
