vs/1.0 add term, privacy,cookie

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -68,7 +68,7 @@ html {
 .container {
   max-width: 1152px;
   margin: 0 auto;
-  padding: 2rem 1.5rem 3rem;
+  padding: 2rem 1.5rem 0;
   overflow-x: hidden;
   width: 100%;
 }
@@ -87,7 +87,7 @@ html {
 @media (max-width: 1280px) {
   .container {
     max-width: 1024px;
-    padding: 2rem 1.5rem 2.75rem;
+    padding: 2rem 1.5rem 0;
   }
 
   .page-container {
@@ -98,7 +98,7 @@ html {
 @media (max-width: 1024px) {
   .container {
     max-width: 768px;
-    padding: 1.5rem 1.25rem 2.5rem;
+    padding: 1.5rem 1.25rem 0;
   }
 
   .page-container {
@@ -108,7 +108,7 @@ html {
 
 @media (max-width: 768px) {
   .container {
-    padding: 1.25rem 1rem 2rem;
+    padding: 1.25rem 1rem 0;
   }
 
   .page-container {
@@ -118,7 +118,7 @@ html {
 
 @media (max-width: 480px) {
   .container {
-    padding: 1rem 0.75rem 1.5rem;
+    padding: 1rem 0.75rem 0;
   }
 
   .page-container {
